[gd_scene load_steps=7 format=2]

[ext_resource path="res://challenges/week7/gfx/city/city.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week7/scenes/city/city.gd" type="Script" id=2]
[ext_resource path="res://common/gfx/particle/explosion.webp" type="Texture" id=3]
[ext_resource path="res://common/sfx/explosion/explosion.wav" type="AudioStream" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}

[sub_resource type="Animation" id=2]
resource_name = "city_floating"
length = 8.0
loop = true
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -5, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.2, 3.5, 8, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.9, 4, 6, 8 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, -3, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, -3, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1.9, 3.95, 6, 8 )
}

[node name="city" type="Node2D"]
script = ExtResource( 2 )

[node name="city" type="Area2D" parent="."]
input_pickable = false
monitorable = false
__meta__ = {
"_edit_group_": true
}

[node name="citySprite" type="Sprite" parent="city"]
texture = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="city"]
visible = false
polygon = PoolVector2Array( -43, 26, -48, 0, -46, -18, -37, -33, -21, -42, 0, -45, 17, -41, 34, -34, 44, -19, 48, 0, 47, 14, 43, 27, 23, 30, 0, 31, -28, 30 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../city")
anims/RESET = SubResource( 1 )
anims/city_floating = SubResource( 2 )

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
amount = 5
randomness = 0.39
texture = ExtResource( 3 )
emission_shape = 2
emission_rect_extents = Vector2( 50, 25 )
gravity = Vector2( 0, 0 )
angle = 237.7
angle_random = 0.4
scale_amount = 0.2
scale_amount_random = 1.0

[node name="ExplosionStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="FinalExplosionsTimer" type="Timer" parent="."]

[connection signal="area_entered" from="city" to="." method="_on_city_area_entered"]
[connection signal="timeout" from="FinalExplosionsTimer" to="." method="_on_FinalExplosionsTimer_timeout"]
